Fix navbar offset on small screens

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -1,4 +1,6 @@
 
-body {
-  padding-top: 40px;
+@media (min-width: 980px) {
+  body {
+    padding-top: 60px;
+  }
 }
